traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: '=' expected but ';' found.
  while(fin == false) {
^Snake:19: error: '=' expected but ';' found.
  if (dir == Direction.EST) {
^Snake:19: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (dir == Direction.EST) {
  ^Snake:28: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return fin
  ^